sumo/tests/duarouter/alternatives/style2_input/errors/vehicle/vehicle_empty_arrivallane/errors.duarouter
Error: Attribute 'arrivalLane' in definition of a vehicle is empty.
Error: Invalid arrivalLane definition for vehicle '1'
Quitting (on error).
